--- a/Weitianshi/pages/my/sharePage/sharePage.wxss
+++ b/Weitianshi/pages/my/sharePage/sharePage.wxss
@@ -6,6 +6,13 @@
   background: #40587a;
 }
 
+#mobileStyle {
+  color: #009eff;
+  text-decoration: underline;
+  width: 40%;
+  margin-right: 16rpx;
+}
+
 .giveProject, .addNetwork, .myContacts {
   display: flex;
   align-items: center; /*垂直居中*/
@@ -18,6 +25,12 @@
   letter-spacing: 0;
   line-height: 28rpx;
   text-align: center;
+}
+
+#hold {
+  width: 40%;
+  color: #009eff;
+  font-size: 24rpx;
 }
 
 .giveProject {
@@ -103,6 +116,7 @@ button {
   font-size: 24rpx;
   color: #f14b50;
 }
+
 .contactLine {
   background: #f0f0f0;
   width: 686rpx;
