--- a/Weitianshi/pages/userDetail/networkDetail/networkDetail.wxss
+++ b/Weitianshi/pages/userDetail/networkDetail/networkDetail.wxss
@@ -18,6 +18,14 @@
 #mobileStyle {
   color: #009eff;
   text-decoration: underline;
+  width: 40%;
+  margin-right: 16rpx;
+}
+
+#hold {
+  width: 40%;
+  color: #009eff;
+  font-size: 24rpx;
 }
 
 .t-shopPic1 {
